updates from luis
Signed-off-by: Susan Berry <sberry@clickherelabs.com>

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
         <div class="slide"><img src="/images/identity/25.jpg"/><span class="label">VIRACOCHA PISCO / BOTTLE SLEEVE</span></div>
         <div class="slide"><img src="/images/identity/26.jpg"/><span class="label">RED LOBSTER / NEW RESTAURANT IDENTITY </span></div>
         <div class="slide"><img src="/images/identity/27.jpg"/><span class="label">TEXAS A&M / BROCHURE SYSTEM</span></div>
-        <div class="slide"><img src="/images/identity/28.jpg"/><span class="label">XCEED DIGITAL AGENCY / MANIFESTO</span></div>        
+        <div class="slide"><img src="/images/identity/28.jpg"/><span class="label">XCEED DIGITAL AGENCY / MANIFESTO</span></div>
+        <div class="slide"><img src="/images/identity/29.jpg"/><span class="label">VICTORY PARK / LOOK BOOK</span></div>       
       </div>
       <div id="marks" class="content slideshow">
         <div class="slide"><img src="/images/marks/1.jpg"/>
@@ -159,7 +160,7 @@
           <img src="/images/marks/2.jpg"/><span class="label">LISA COBB & ASSOCIATES<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> AUSTIN COLLEGE<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> ALDEN’S MUSIC SUPPLY<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> BOOKER T. WASHINGTON PTSA</span>
         </div>
         <div class="slide">
-          <img src="/images/marks/3.jpg"/><span class="label">BAREFOOT HIKING BOOTS<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> GARRET VIDEO<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> HOME DEPOT HUSKY<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> ALBERTO CERCONE TAILOR</span>
+          <img src="/images/marks/3.jpg"/><span class="label">BEARFOOT HIKING BOOTS<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> GARRET VIDEO<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> HOME DEPOT HUSKY<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> ALBERTO CERCONE TAILOR</span>
         </div>
         <div class="slide">
           <img src="/images/marks/4.jpg"/><span class="label">RUMBLE ROCKABILLY<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> LINEA JEWELRY<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> ANTLER ORCHARDS<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> FIREATERS SALSA</span>
