--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
       </div>
       <div id="digital" class="content slideshow">
-        <div class="slide"><img src="/images/digital/erik.jpg"/><span class="label">ITALIAN MODERNISTS<br>MOBILE APP / EDUCATIONAL</span></div>
+        <div class="slide"><img src="/images/digital/erik.jpg"/><span class="label">MODERNISTS<br>MOBILE APP / EDUCATIONAL</span></div>
         <div class="slide"><img src="/images/digital/firestone.jpg"/><span class="label">FIRESTONE INDY 5OO<br>MOBILE APP</span></div>
         <div class="slide"><img src="/images/digital/mindunseen.jpg"/><span class="label">HENRY DARGER / MINDUNSEEN<br>EDUCATIONAL ARTIST SERIES</span></div>
         <div class="slide"><img src="/images/digital/trinity.jpg"/><span class="label">TRINITY UNIVERSITY<br>VISUALIZATION</span></div>
