--- a/index.html
+++ b/index.html
@@ -71,40 +71,40 @@
             <h3 class="disciplines">DISCIPLINES:</h3>
 
             <p>ADVERTISING<br>
-            BRAND CREATION<br>
             BRAND REVITALIZATION<br>
-            CORPORATE IDENTITY<br>
-            DIGITAL<br>
-            EXHIBITIONS<br>
+            BRAND STRATEGY<br>
+            DIGITAL DESIGN<br>
+            EXPERIENTIAL DESIGN<br>
             INTERACTIVE DESIGN<br>
-            IDENTITY SYSTEMS <br>
-            PRODUCT IDENTITY<br>
-            PRINT<br>
-            WAYFINDING</p>
+            IDENTITY ARCHITECTURE IDENTITY CREATION<br>
+            PACKAGING DESIGN<br>
+            SIGNAGE & WAYFINDING<br>
+            SEMIOTICS</p>
 
           </div>
           <div class="col-sm-12 col-md-9 ">
 
             <h3>CLIENTS BY INDUSTRY:</h3>
-            <p><strong>APPAREL:</strong>   FRUIT OF THE LOOM, HAROLDS, TIE-COON TRADING CO., WALMART/WHITE STAG<br> 
-            <strong>AUTOMOTIVE:</strong>   ADVANCED AUTO PARTS. FIRESTONE, HYUNDAI, PEP BOYS, SEWELL, S&B FILTERS<br> 
-            <strong>BANKING:</strong>    COMPASS BANK, FIRST USA, LOMAS FINANCIAL, PLAINS CAPITAL<br> 
-            <strong>COSMETICS:</strong>    BEAUTI-CONTROL, BROWN COSMETICS, FABERGÉ, FAS COSMETICS, MARY KAY COSMETICS, ULTA<br> 
-            <strong>EDUCATION:</strong>    AUSTIN COLLEGE, TEXAS A&M UNIVERSITY, SOUTH UNIVERSITY, TRINITY UNIVERSITY, WAKE FOREST<br> 
-            <strong>ENERGY:</strong>    ATMOS ENERGY, CURRENT ENERGY, RELIANT ENERGY, STALLWORTH, INC, TXU ENERGY<br> 
-            <strong>FINANCIAL SERVICES:</strong>   BEHRINGER HARVARD, BENEFIT MALL, LPL FINANCIAL, MERRILL LYNCH, CHARLES SCHWAB<br> 
-            <strong>FOOD & BEVERAGE:</strong>   CENTRAL MARKET, EL PASO CHILE CO., DR PEPPER, HEB PLUS, GIANT EAGLE, WILLIAM SONOMA, STUBBS BBQ<br> 
-            <strong>HEALTHCARE:</strong>    BAYLOR HEALTHCARE, CHILDREN’S MEDICAL, MEDICAL CITY, PRESBYTERIAN HOSPITAL, UT SOUTHWESTERN, MD ANDERSON<br> 
-            <strong>HOTEL & RESORTS:</strong>   ARIA, BILTMORE, SOFITEL, VIDANTA RESORTS, WYNDHAM HOTELS<br> 
-            <strong>NONPROFIT:</strong>    SALVATION ARMY, AMERICAN HEART ASSOCIATION, GUIDESTONE LEWISVILLE HUMANE SOCIETY<br> 
-            <strong>ORGANIZATIONS:</strong>    AIA CHAPTER OF DALLAS, DALLAS ADVERTISING LEAGUE, DALLAS SOCIETY OF VISUAL COMMUNICATIONS<br> 
-            <strong>REAL ESTATE:</strong>    CROW HOLDINGS,  RICHARD HILL & ASSOC., SOTHEBY’S INTERNATIONAL REALTY, VICTORY PARK, DAVID GRIFFIN, INC. <br> 
-            <strong>RESTAURANTS:</strong>    BRINKER INTERNATIONAL, CHICK-FIL-A, CHILI’S, DALTS, TGI FRIDAYS, YAPAS<br> 
-            <strong>RETAIL & WHOLESALE:</strong>    AMERICAN GREETINGS, COOKWORKS, HOME DEPOT, NEIMAN MARCUS, SUB-ZERO AND WOLFE, THOMASVILLE<br> 
-            <strong>TECHNOLOGY:</strong>    AVAYA, CYRIX, EDS, NORTEL, NORTON, SONUS, TEXAS INSTRUMENTS <br> 
-            <strong>TELECOMMUNICATIONS:</strong>    AT&T, CELLULAR ONE, METROPCS, NOKIA, SAMSUNG, SPRINT<br> 
-            <strong>TRAVEL:</strong> </strong>    HOMEAWAY, TRAVELOCITY, TRAVEL WEB<br> 
-            <strong>WINE & SPIRITS:</strong>    FROZEN GHOST VODKA, MANCORA SPIRITS, PATRON TEQUILA, TEQUILA NACIONAL, VIRACOCHA</p>
+            <p>
+            <strong>APPAREL: </strong>   FRUIT OF THE LOOM, HAROLD’S, TIE-COON TRADING CO., WALMART/WHITE STAG CLOTHING<br>
+            <strong>AUTOMOTIVE: </strong>  ADVANCED AUTO PARTS, FIRESTONE, HYUNDAI, PEP BOYS, SEWELL, S&B FILTERS<br>
+            <strong>BANKING: </strong>   COMPASS BANK, FIRST USA, LOMAS FINANCIAL, PLAINS CAPITAL<br>
+            <strong>COSMETICS: </strong>   BEAUTI-CONTROL, BROWN COSMETICS, FABERGÉ, FAS COSMETICS, MARY KAY COSMETICS, ULTA<br>
+            <strong>EDUCATION: </strong>   AUSTIN COLLEGE, SOUTH UNIVERSITY, TEXAS A&M UNIVERSITY, TRINITY UNIVERSITY, WAKE FOREST<br>
+            <strong>ENERGY: </strong>   ATMOS ENERGY, CURRENT ENERGY, RELIANT ENERGY, STALLWORTH, INC., TXU ENERGY<br>
+            <strong>FINANCIAL SERVICES: </strong>  BEHRINGER HARVARD, BENEFIT MALL, CHARLES SCHWAB, KEY BANK, LPL FINANCIAL, MERRILL LYNCH<br>
+            <strong>FOOD & BEVERAGE:</strong>  CENTRAL MARKET, DR PEPPER, EL PASO CHILE CO., GIANT EAGLE, HEB PLUS, STUBBS BBQ, WILLIAM SONOMA<br>
+            <strong>HEALTHCARE: </strong>   BAYLOR HEALTHCARE, CHILDREN’S MEDICAL, MD ANDERSON, MEDICAL CITY, PRESBYTERIAN HOSPITAL, UT SOUTHWESTERN<br>
+            <strong>HOTEL & RESORTS: </strong>  ARIA, BILTMORE, SOFITEL, VIDANTA RESORTS, WYNDHAM HOTELS<br>
+            <strong>NON-FOR-PROFIT: </strong>   AMERICAN HEART ASSOCIATION, GUIDESTONE, LEWISVILLE HUMANE SOCIETY, SALVATION ARMY,<br>
+            <strong>ORGANIZATIONS: </strong>   AIA CHAPTER OF DALLAS, DALLAS ADVERTISING LEAGUE, DALLAS SOCIETY OF VISUAL COMMUNICATIONS<br>
+            <strong>REAL ESTATE: </strong>   CROW HOLDINGS,  DAVID GRIFFIN REALTY, RICHARD HILL & ASSOCIATES, SOTHEBY’S INTERNATIONAL REALTY, VICTORY PARK<br>
+            <strong>RESTAURANTS: </strong>   BRINKER INTERNATIONAL, CHICK-FIL-A, CHILI’S, DALTS, TGI FRIDAYS, YAPAS<br>
+            <strong>RETAIL: </strong>   AMERICAN GREETINGS, COOKWORKS, HOME DEPOT, NEIMAN MARCUS, SUB-ZERO AND WOLF, THOMASVILLE<br>
+            <strong>TECHNOLOGY: </strong>   AVAYA, CYRIX, EDS, NORTEL, NORTON, SONUS, TEXAS INSTRUMENTS <br>
+            <strong>TELECOMMUNICATIONS:</strong>    AT&T, CELLULAR ONE, METROPCS, NOKIA, SAMSUNG, SPRINT<br>
+            <strong>TRAVEL:</strong>    HOMEAWAY, TRAVELOCITY, TRAVEL WEB<br>
+            <strong>WINE & SPIRITS:</strong>  FROZEN GHOST VODKA, MANCORA SPIRITS, PATRON TEQUILA, TEQUILA NACIONAL, VIRACOCHA </p>
 
           </div>
         </div>
@@ -179,11 +179,11 @@
           <span class="label">SUNFISH SPORT FISHING CHARTERS<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> YAPAS HEALTH RESTAURANT <span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs">  AFI FILM FESTIVAL<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> STUBB’S LEGENDARY KITCHENS</span>
         </div>
         <div class="slide">
-          <img src="/images/marks/9.jpg"/><span class="label">LEMMON GRASS THAI CUISINE<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> SERRANOS SPANISH FUSION <span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs">  BLOSSOM ASIAN CUISINE<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> JEAN PHILLIPE FRENCH PASTRIES</span>
-        </div>
-        <div class="slide">
           <img src="/images/marks/10.jpg"/><span class="label">MEDICAL CITY <span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs">  NIGHT & DAY PHOTOGRAPHY EXHIBIT <span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs">  VIRACOCHA MARTINI MASTERS <span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs">  JOEY BELLADONNA</span>
         </div>
+        <div class="slide">
+          <img src="/images/marks/9.jpg"/><span class="label">LEMMON GRASS THAI CUISINE<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> SERRANOS SPANISH FUSION <span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs">  BLOSSOM ASIAN CUISINE<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> JEAN PHILLIPE FRENCH PASTRIES</span>
+        </div>        
       </div>
 
 
