--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             DIGITAL DESIGN<br>
             EXPERIENTIAL DESIGN<br>
             INTERACTIVE DESIGN<br>
-            IDENTITY ARCHITECTURE IDENTITY CREATION<br>
+            IDENTITY ARCHITECTURE<br>
+            IDENTITY CREATION<br>
             PACKAGING DESIGN<br>
             SIGNAGE & WAYFINDING<br>
             SEMIOTICS</p>
@@ -166,7 +167,7 @@
           <img src="/images/marks/4.jpg"/><span class="label">RUMBLE ROCKABILLY<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> LINEA JEWELRY<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> ANTLER ORCHARDS<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> FIREATERS SALSA</span>
         </div>
         <div class="slide">
-          <img src="/images/marks/5.jpg"/><span class="label">CITYFAIR DEVELOPMENT<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> SNAKEBITE SALSA<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> ANTLER ORCHARDS<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> RICHARD REENS PHOTOGRAPHY</span>
+          <img src="/images/marks/5.jpg"/><span class="label">CITYFAIR DEVELOPMENT<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> SNAKEBITE SALSA<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> HAROLD'S CLOTHIER<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> RICHARD REENS PHOTOGRAPHY</span>
         </div>
         <div class="slide">
           <img src="/images/marks/6.jpg"/><span class="label">LOMAS FINANCIAL<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> BEHRINGER HARVARD FINANCIAL<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> HILL ASSOCIATES<span class="hidden-xs"> &nbsp;&nbsp;|&nbsp;&nbsp;</span><br class="visible-xs"> DALLAS ADVERTISING LEAGUE</span>
