--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <div class="slide"><img src="/images/product/10.jpg"/><span class="label">MOM’S PASTA SAUCE / REBRAND</span></div>
 
       </div>
-      <div id="contact" class="content">
+      <div id="contact" class="content"><br>
         <p>Submit your inquiries to:<br>
         <a href="mailto:luis_acevedo@insidethink.com">luis_acevedo@insidethink.com</a></p>
 
